[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gfx/sprites/plant1.png" type="Texture" id=1]
[ext_resource path="res://Plant.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/sprites/plant6.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 108, 220 )

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 25
particles_anim_v_frames = 50
particles_anim_loop = false

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00581396, 0.972727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.254545 ), 0.0, 0.0, 0, 0 ]

[node name="Plant" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 8
collision_mask = 20
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -238 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -182.235 )
shape = SubResource( 1 )

[node name="destruction_particles" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 4, 4 )
emitting = false
amount = 30
lifetime = 0.35
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 90.97
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.1
angular_velocity = 90.0
angular_velocity_random = 0.38
scale_amount_curve = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="free_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Plant_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Plant_area_exited"]
[connection signal="timeout" from="free_timer" to="." method="_on_free_timer_timeout"]
